--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+
+/front/.pnp
 .pnp.js
 
 # testing
@@ -23,3 +23,4 @@ yarn-debug.log*
 yarn-error.log*
 
 /front/node_modules/
+/front/.vite/
