--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@ yarn-error.log*
 
 /front/node_modules/
 /front/.vite
+
+__pycache__
+/sqlsampleapp/sqltestapp
+/sqlsampleapp/test
+/sqlsampleapp/testapp
