--- a/sqlsampleapp/requirements.txt
+++ b/sqlsampleapp/requirements.txt
@@ -1,3 +1,4 @@
-flask              3.0.3
-flask-sqlalchemy   3.1.1
-requests           2.32.3
+flask==3.0.3
+flask-sqlalchemy==3.1.1
+requests==2.32.3
+geopy==2.4.1
